# mobile-robotic-manipulation

./: .gitignore  README.md
arm_control/: CMakeLists.txt  package.xml
arm_control/include/arm_control/: arm_control.h
arm_control/launch/: arm_control.launch
arm_control/src/: arm_control_node.cpp
arm_control/src/arm_control/: arm_control.cpp
arm_control/srv/: ArmControlSrv.srv
base_control/: CMakeLists.txt  package.xml
base_control/include/base_control/: base_control.h
base_control/launch/: base_control.launch  base_control_server.launch
base_control/scripts/: base_control_client.py  base_control_server.py
base_control/src/: base_control_node.cpp
base_control/src/base_control/: base_control.cpp
base_control/srv/: BaseControlSrv.srv
motion_planning/: CMakeLists.txt  package.xml
motion_planning/include/motion_planning/: motion_planning.h
motion_planning/scripts/: Yam_90_Rotate_client.py  Yam_90_Rotate_server.py
motion_planning/src/: motion_planning.cpp  motion_planning_node.cpp
motion_planning/src/motion_planning/: motion_planning.cpp
motion_planning/srv/: yamRotate.srv
move_control/: CMakeLists.txt  package.xml
move_control/include/move_control/: move_control.h
move_control/launch/: move_control.launch  move_control_server.launch
move_control/src/: move_control_node.cpp
move_control/src/move_control/: move_control.cpp
move_control/srv/: MoveControlSrv.srv
read_dae/: CMakeLists.txt  package.xml
read_dae/include/read_dae/: read_dae.h
read_dae/launch/: read_dae.launch
read_dae/src/: read_dae_node.cpp
read_dae/src/read_dae/: read_dae.cpp
read_targets/: CMakeLists.txt  package.xml
read_targets/include/read_targets/: read_targets.h
read_targets/launch/: read_targets.launch
read_targets/preprocessing/: Triangle_center_position.txt  Triangle_normals.txt  boat.stl  read_file.py
read_targets/src/: read_targets_node.cpp
read_targets/src/read_targets/: read_targets.cpp
sample_arm_control/: CMakeLists.txt  package.xml
sample_arm_control/include/sample_arm_control/: sample_arm_control.h
sample_arm_control/launch/: sample_arm_control.launch
sample_arm_control/src/: sample_arm_control_node.cpp
sample_arm_control/src/sample_arm_control/: sample_arm_control.cpp
sample_control/: CMakeLists.txt  package.xml
sample_control/src/: sample_control_node.cpp
sample_move_control/: CMakeLists.txt  package.xml
sample_move_control/include/sample_move_control/: sample_move_control.h
sample_move_control/src/: sample_move_control_node.cpp
sample_move_control/src/sample_move_control/: sample_move_control.cpp
touch_planner/: CMakeLists.txt  package.xml
touch_planner/include/touch_planner/: touch_planner.h
touch_planner/src/: touch_planner_node.cpp
touch_planner/src/touch_planner/: touch_planner.cpp
