<?xml version="1.0"?>
<package format="2">
  <name>motion_planning</name>
  <version>0.0.0</version>
  <description>The motion_planning package</description>

  <maintainer email="eric@todo.todo">eric</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_control</build_depend>
  <build_depend>read_targets</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>touch_planner</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_control</build_export_depend>
  <build_export_depend>read_targets</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>touch_planner</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_control</exec_depend>
  <exec_depend>read_targets</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>touch_planner</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
